[package]
name = "url-collector"
version = "0.11.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
clap = { version = "4.5.0", features = ["derive"] }
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = [] }
serde_yaml = "0.9.31"
simplelog = { version = "0.12.1", features = ["paris"] }
sitemap = "0.4.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }

[workspace.metadata.release]
sign-tag = true
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
pre-release-replacements = [
  {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
]
